--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -75,8 +75,10 @@
  <tr>
   <td>
    <span style="font-weight:bold;">電子錠</span><br>
-     名古屋事務所ドアの電子錠について、もし電池が無くなり動作しなくなった場合、アルカリ9V(6LR61)電池を端子に接触させ、解錠する必要があります。</br>
-     ＞取扱説明書</br>
+ 名古屋事務所ドアの電子錠についての注意事項です。<br>
+ 電池が無くなり動作しなくなった場合、アルカリ9V(6LR61)電池を端子に接触させながら解錠する必要があります。</br>
+ 詳細は取扱説明書をご確認ください。</br>
+ ＞取扱説明書</br>
  <a href="http://www.lock-search.com/add_pdf/kabadrive/kaba-drive-toriatukai.pdf" target="_blank">
  http://www.lock-search.com/add_pdf/kabadrive/kaba-drive-toriatukai.pdf</a></td>
   </tr>
