--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/index.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/index.html
@@ -54,6 +54,7 @@
 
   
 <footer>
+<small>KZ2024・MD・029</small>
 <small>Copyright 2024 KIZUNA Small Amount and Short Term Insurance Co., Ltd.</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
