--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -174,6 +174,11 @@
 <td>法人登記（全部事項）</td>
 <td><a href="pdf/registration20241025.pdf" target="_blank">PDF</a></td>
 </tr>
+<tr>
+<th style="width: 35%;">標識</th>
+<td>事務所掲示用の標識</td>
+<td><a href="pdf/sign_for_office.pdf" target="_blank">PDF</a></td>
+</tr>
 </table>
  
 </form>
