--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -161,7 +161,7 @@
 </tr>
 <tr>
 <th>流動性リスク管理規程</th>
-<td>流動性リスク管理規程（修正前）</td>
+<td>流動性リスク管理規程</td>
 <td><a href="pdf/Liquidity_risk.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
