--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -114,6 +114,11 @@
 <td><a href="pdf/compliance_manual.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
+<th>少額短期保険募集人試験問題集</th>
+<td>2023年5月版</td>
+<td><a href="pdf/questions.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
 <th>勧誘方針</th>
 <td>勧誘方針のひな形</td>
 <td><a href="pdf/agency_solicitation.pdf" target="_blank">PDF</a></td>
