--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -133,11 +133,6 @@
 <td>重要事項説明書の概要</td>
 <td><a href="pdf/overview.pdf" target="_blank">PDF</a></td>
 </tr>
-<tr>
-<th>参考資料</th>
-<td>認定ＮＰＯ法人ひょうご消費者ネットの記事</td>
-<td><a href="pdf/505_7.pdf" target="_blank">PDF</a></td>
-</tr>
 </table>
 
 <br><br>  
@@ -170,19 +165,24 @@
 <td><a href="pdf/Liquidity_risk.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
+<th style="width: 35%;">標識等</th>
+<td>事務所掲示用</td>
+<td><a href="pdf/sign_for_office.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
+<th style="width: 35%;">法人登記</th>
+<td>法人登記（全部事項）2024/10/25</td>
+<td><a href="pdf/registration20241025.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
 <th>名古屋伏見ビル管理規則</th>
 <td>名古屋伏見ビル管理規則</td>
 <td><a href="pdf/regulations_building.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
-<th style="width: 35%;">法人登記</th>
-<td>法人登記（全部事項）</td>
-<td><a href="pdf/registration20241025.pdf" target="_blank">PDF</a></td>
-</tr>
-<tr>
-<th style="width: 35%;">標識等</th>
-<td>事務所掲示用</td>
-<td><a href="pdf/sign_for_office.pdf" target="_blank">PDF</a></td>
+<th>参考資料</th>
+<td>認定ＮＰＯ法人ひょうご消費者ネットの記事</td>
+<td><a href="pdf/505_7.pdf" target="_blank">PDF</a></td>
 </tr>
 </table>
  
