--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
@@ -51,13 +51,19 @@
    <p>
     <span style="font-size: 130%; font-weight: bold;">イズモ株式会社（パルモグループ）</span><br>
     <span style="font-size: 100%; font-weight: bold;">【 総務部総務課 】</span><br>
-    <span style="font-size: 100%;">〒432-8017　静岡県浜松市中央区三組町158-1</span><br>
+    <span style="font-size: 100%;">〒432-8017 静岡県浜松市中央区三組町158-1</span><br>
     <span style="font-size: 100%;">TEL：053-450-5155</span><br>
-  </p><br>
+    <span style="font-size: 100%;">Mail：h.nakamura@palmo-group.co.jp（中村 様）</span><br>
+    <span style="font-size: 100%;">Mail：a.honke@palmo-group.co.jp（本家 様）</span><br><br>
+    <span style="font-size: 100%; font-weight: bold;">【 営業部 】</span><br>
+    <span style="font-size: 100%;">〒432-8017 静岡県浜松市中央区三組町158-1</span><br>
+    <span style="font-size: 100%;">TEL：053-401-1018</span><br>
+    <span style="font-size: 100%;">Mail：y.iwase@palmo-group.co.jp（岩瀬 様）</span><br>
+   </p><br>
    <p>
     <span style="font-size: 130%; font-weight: bold;">株式会社ハース・ジャパン</span><br>
     <span style="font-size: 100%; font-weight: bold;">【 本社 】</span><br>
-    <span style="font-size: 100%;">〒465-0092　愛知県名古屋市名東区社台3-105</span><br>
+    <span style="font-size: 100%;">〒465-0092 愛知県名古屋市名東区社台3-105</span><br>
     <span style="font-size: 100%;">TEL：052-737-8900</span><br>
   </p><br>
     <p>
@@ -69,26 +75,29 @@
   </p><br>
     <p>
     <span style="font-size: 130%; font-weight: bold;">一般社団法人 日本少額短期保険協会</span><br>
-    <span style="font-size: 100%;">〒104-0032　東京都中央区八丁堀3丁目12-8-2F</span><br>
+    <span style="font-size: 100%;">〒104-0032 東京都中央区八丁堀3丁目12-8-2F</span><br>
     <span style="font-size: 100%;">TEL：03-6222-4422</span><br> 
     </p><br>
      <p>
     <span style="font-size: 130%; font-weight: bold;">ＯＡＧ税理士法人</span><br>
     <span style="font-size: 100%; font-weight: bold;">【 タックスアドバイザリー第3部 】</span><br>
-    <span style="font-size: 100%;">〒102-0076　東京都千代田区五番町6番地2ホーマットホライゾン</span><br>
+    <span style="font-size: 100%;">〒102-0076 東京都千代田区五番町6番地2ホーマットホライゾン</span><br>
     <span style="font-size: 100%;">TEL：03-3237-7530</span><br>
-    <span style="font-size: 100%;">Mail：tomoki_uemae@oag-tax.co.jp（上前 友輝）</span><br>      
+    <span style="font-size: 100%;">Mail：tomoki_uemae@oag-tax.co.jp（上前 様）</span><br>
+    <span style="font-size: 100%;">備考：経理関連委託業者</span><br>  
   </p><br>  
     <p>
     <span style="font-size: 130%; font-weight: bold;">情報通信設備株式会社</span><br>
     <span style="font-size: 100%;">〒467-0806 愛知県名古屋市瑞穂区瑞穂通7-8-4</span><br>
     <span style="font-size: 100%;">TEL：052-851-1212</span><br>
-    <span style="font-size: 100%;">Mail：mizukami@jts758.com（水上）</span><br>      
+    <span style="font-size: 100%;">Mail：mizukami@jts758.com（水上 様）</span><br>
+    <span style="font-size: 100%;">備考：通信関連委託業者（電話・ネット等）</span><br> 
   </p><br>
     <p>
     <span style="font-size: 130%; font-weight: bold;">株式会社シーエスエス</span><br>
     <span style="font-size: 100%;">〒541-0051 大阪市中央区備後町3-6-2</span><br>
     <span style="font-size: 100%;">TEL：06-4708-4380</span><br>
+    <span style="font-size: 100%;">備考：収納代行委託業者（口座振替）</span><br> 
   </p><br>
  
 </section>
