--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -63,6 +63,7 @@
    <li>提出したファイルの過去分は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link" target="_blank">こちら（Googleドライブ）</a></span></li>
    <li>上記とは別に、<span style="font-weight: bold;">毎月10日</span>にハース・ジャパン社の試算表（前々月末）を提出すること。</li>
+   <li>※2024年11月15日分（11月10日までの数値）の報告までは対応済。</li>
   </ul>
  </td>
 </tr>
@@ -94,6 +95,7 @@
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
    <li>提出したファイルの過去分は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link" target="_blank">こちら（Googleドライブ）</a></span></li>
+   <li>※2024年11月20日分（10月31日までの数値）の報告までは対応済。</li>
   </ul>
  </td>
 </tr>
@@ -188,6 +190,40 @@
    <li>提出するファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1QiNZl8FZP11R8Npxms2M93LDFELdvl_b?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
    <li>↑のファイルは2024年12月2日を提出日として作成しているため、異なる日で提出する場合、提出日をすべて修正すること。</li>
+  </ul>
+ </td>
+ </tr>
+</table>
+</section>
+
+<section>
+<h2>新規代理店登録</h2>
+<table class="ta2">
+ <tr>
+  <th>概要</th>
+  <td>
+   パルモグループ内に「パルモサービス株式会社」という法人ができ、この法人で保険募集を行うこととなりました。<br>
+   既代理店の２社とは異なり、きずな少短を代申とした代理店登録となります。<br>
+   現在「パルモサービス株式会社」には、イズモ株式会社・出雲殿岡崎法人からの出向社員と、<br>
+   「パルモサービス株式会社」へ転籍した社員がいるらしく、転籍社員の中にすでに募集試験合格者が存在するとのこと。<br>
+  </td>
+ </tr>
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+<tr>
+ <th>提出方法</th>
+ <td><a href="https://ssi-d.jp/business/detail/24" target="_blank">マニュアル</a>を参照。</td>
+</tr>
+ <tr>
+ <th>備考</th>
+ <td>
+  <ul>
+   <li>代理店側の担当は、イズモ社の中村様になります。</li>
+   <li>パルモサービス株式会社の定款の目的欄を確認してもらったところ、適切な記載がなかったとのこと。</li>
+   <li>2024年11月13日現在、定款変更の手続き中とのこと。</li>
+   <li>2024年11月14日、当局への申請手続きまでの書類を取りまとめ、東京事務所へ郵送します。</li>
   </ul>
  </td>
  </tr>
