--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -32,7 +32,9 @@
  <!--/#menubar-->
  
 <main>
-
+<p>※当局対応については、少短協会ダッシュボード内の<a href="https://ssi-d.jp/business/" target="_blank">業務支援</a>や、
+ <a href="https://ssi-d.jp/documents/" target="_blank">当局手続き (報告・届出等)</a>にマニュアルがあるので参照してください。</p>
+ 
 <section>
 <h2>報告徴求命令に基づく報告</h2>
 <table class="ta2">
