--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -32,8 +32,8 @@
  <!--/#menubar-->
  
 <main>
-<p>※当局対応については、少短協会ダッシュボード内の<a href="https://ssi-d.jp/business/" target="_blank">業務支援</a>や、
- <a href="https://ssi-d.jp/documents/" target="_blank">当局手続き (報告・届出等)</a>にマニュアルがあるので参照してください。</p>
+<p>※当局対応については、少短協会ダッシュボード内の<a href="https://ssi-d.jp/business/" target="_blank">業務支援</a>や
+ <a href="https://ssi-d.jp/documents/" target="_blank">当局手続き (報告・届出等)</a>にマニュアルがあるので参照してください。</p><br>
  
 <section>
 <h2>報告徴求命令に基づく報告</h2>
@@ -204,10 +204,7 @@
  <tr>
   <th>概要</th>
   <td>
-   パルモグループ内に「パルモサービス株式会社」という法人ができ、この法人で保険募集を行うこととなりました。<br>
-   既代理店の２社とは異なり、きずな少短を代申とした代理店登録となります。<br>
-   現在「パルモサービス株式会社」には、イズモ株式会社・出雲殿岡崎法人からの出向社員と、<br>
-   「パルモサービス株式会社」へ転籍した社員がいるらしく、転籍社員の中にすでに募集試験合格者が存在するとのこと。<br>
+   パルモグループ内に「パルモサービス株式会社」という法人ができ、この法人で保険募集するため、きずな少短を代申とした代理店登録を行う。
   </td>
  </tr>
 <tr>
@@ -215,17 +212,19 @@
  <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
 </tr>
 <tr>
- <th>提出方法</th>
- <td><a href="https://ssi-d.jp/business/detail/24" target="_blank">マニュアル</a>を参照。</td>
+ <th>提出方法・提出物</th>
+ <td><a href="https://ssi-d.jp/business/detail/24" target="_blank">こちら</a>を参照してください。</td>
 </tr>
  <tr>
  <th>備考</th>
  <td>
   <ul>
-   <li>代理店側の担当は、イズモ社の中村様になります。</li>
-   <li>パルモサービス株式会社の定款の目的欄を確認してもらったところ、適切な記載がなかったとのこと。</li>
-   <li>2024年11月13日現在、定款変更の手続き中とのこと。</li>
-   <li>2024年11月14日、当局への申請手続きまでの書類を取りまとめ、東京事務所へ郵送します。</li>
+   <li>代理店側の担当はイズモ社の中村様。</li>
+   <li>現在「パルモサービス株式会社」には、イズモ株式会社・出雲殿岡崎法人からの出向社員と
+   「パルモサービス株式会社」へ転籍した社員がいるらしく、転籍社員の中にすでに募集試験合格者が存在するとのこと。</li>
+   <li>パルモサービス株式会社の定款の目的欄を確認してもらったところ、適切な記載がなかったため、定款変更の手続き中とのこと。</li>
+   <li>代理店委託契約書（捺印済・印紙あり）等を東京事務所へ郵送済。（2024/11/14）</li>
+   <li>定款の変更が確認でき次第、代理店登録の申請を行うこと。</li>
   </ul>
  </td>
  </tr>
