--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -184,6 +184,11 @@
 <td>認定ＮＰＯ法人ひょうご消費者ネットの記事</td>
 <td><a href="pdf/505_7.pdf" target="_blank">PDF</a></td>
 </tr>
+<tr>
+<th>基幹システム</th>
+<td>インストールファイル</td>
+<td><a href="https://drive.google.com/drive/folders/1icQW4ESA8xrCofR6Wvrdna-VXpH3CHmy?usp=drive_link" target="_blank">GoogleドライブF</a></td>
+</tr>
 </table>
  
 </form>
