--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -171,7 +171,7 @@
 </tr>
 <tr>
 <th style="width: 35%;">法人登記</th>
-<td>法人登記（全部事項）2024/10/25</td>
+<td>きずなの履歴事項証明書</td>
 <td><a href="pdf/registration20241025.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
