--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -223,7 +223,7 @@
    <li>現在「パルモサービス株式会社」には、イズモ株式会社・出雲殿岡崎法人からの出向社員と
    「パルモサービス株式会社」へ転籍した社員がいるらしく、転籍社員の中にすでに募集試験合格者が存在するとのこと。</li>
    <li>パルモサービス株式会社の定款の目的欄を確認してもらったところ、適切な記載がなかったため、定款変更の手続き中とのこと。</li>
-   <li>代理店委託契約書（捺印済・印紙あり）等を東京事務所へ郵送済。（2024/11/14）</li>
+   <li>代理店委託契約書は手渡し済み。捺印と印紙の貼付ができ次第、東京事務所へ郵送するよう依頼済。</li>
    <li>定款の変更が確認でき次第、代理店登録の申請を行うこと。</li>
   </ul>
  </td>
