--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -69,7 +69,7 @@
  <tr>
   <td>
    <span style="font-weight:bold;">キャビネット</span><br>
-   キャビネット内には、以下の書類等が格納されてます。
+   キャビネット内には、以下の書類等が格納されてます。<br>
    ・社内規定等、備品契約書等、代理店委託契約書、郵便物等（最上段）<br>
    ・パンフレット、重説、約款、申込書、記入例、募集人テキスト等（二段目、三段目）<br>
      ※名古屋事務所内のキャビネットは、最上段のみ施錠しています。「5963」で解錠。</td>
