--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -55,6 +55,7 @@
     <a href="https://kizuna-ssi.net/" target="_blank">代理店向けサイト</a>
     <a href="https://kizuna-ssi.jp/agency01" target="_blank">パルモの死亡保険</a>
     <a href="https://github.com/" target="_blank">GitHub</a>
+    <a href="https://www.onamae.com/navi/login/" target="_blank">お名前.com</a>
   </div>
 </div>
   
