--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
@@ -64,7 +64,11 @@
     <span style="font-size: 130%; font-weight: bold;">株式会社ハース・ジャパン</span><br>
     <span style="font-size: 100%; font-weight: bold;">【 本社 】</span><br>
     <span style="font-size: 100%;">〒465-0092 愛知県名古屋市名東区社台3-105</span><br>
-    <span style="font-size: 100%;">TEL：052-737-8900</span><br>
+    <span style="font-size: 100%;">TEL：052-737-8900</span><br>経理部
+    <span style="font-size: 100%; font-weight: bold;">【 経理部 】</span><br>
+    <span style="font-size: 100%;">〒465-0092 愛知県名古屋市名東区社台3-105</span><br>
+    <span style="font-size: 100%;">TEL：052-737-8903</span><br>
+    <span style="font-size: 100%;">Mail：sakamoto@hearse-japan.co.jp（坂本 様）</span><br>
   </p><br>
     <p>
     <span style="font-size: 130%; font-weight: bold;">東海財務局</span><br>
