--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -59,8 +59,8 @@
  <th>備考</th>
  <td>
   <ul>
-   <li>毎月5日の報告は、会計事務所より前月末時点の事業費とキャッシュ残の連携されるので、それを元に作成すること。</li>
-   <li>毎月15日、25日の報告は、10日時点・20日時点の普通預金口座と収納口座、両方のキャッシュ残をOAGライフコンシェルジュに照会すること。</li>
+   <li>毎月5日の報告は、ＯＡＧ税理士法人の上前様より前月末時点の事業費と現預金残高が連携されるので、それを元に作成すること。</li>
+   <li>毎月15日、25日の報告は、10日時点・20日時点の普通預金口座と収納口座、両方の残高を現預金残高として作成すること。</li>
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
    <li>提出したファイルの過去分は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link" target="_blank">こちら（Googleドライブ）</a></span></li>
@@ -92,8 +92,8 @@
  <th>備考</th>
  <td>
   <ul>
-   <li>会計事務所より前月末時点の事業費とキャッシュ残の連携されるので、それを元に作成すること。</li>
-   <li>純資産の額も会計事務所より連携されるが、売上実績の確定の都合上、連携時期は毎月中旬ごろとなる。</li>
+   <li>ＯＡＧ税理士法人の上前様より前月末時点の事業費と現預金残高の連携されるので、それを元に作成すること。</li>
+   <li>純資産の額ＯＡＧ税理士法人の上前様より連携されるが、売上実績の確定の都合上、連携時期は毎月中旬ごろとなる。</li>
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
    <li>提出したファイルの過去分は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link" target="_blank">こちら（Googleドライブ）</a></span></li>
