--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -56,8 +56,7 @@
  手続き名は<span style="font-weight: bold;">「少額短期保険業者による報告又は資料の提出」</span></td>
 </tr>
 <tr>
- <th>備考</th>
- <td>
+ <td colspan="2">
   <ul>
    <li>毎月5日の報告は、ＯＡＧ税理士法人の上前様より前月末時点の事業費と現預金残高が連携されるので、それを元に作成すること。</li>
    <li>毎月15日、25日の報告は、10日時点・20日時点の普通預金口座と収納口座、両方の残高を現預金残高として作成すること。</li>
