--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -88,8 +88,7 @@
  <td><a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">FIMOSシステム（要Gビズ）</a></td>
 </tr>
 <tr>
- <th>備考</th>
- <td>
+ <td colspan="2">
   <ul>
    <li>ＯＡＧ税理士法人の上前様より前月末時点の事業費と現預金残高の連携されるので、それを元に作成すること。</li>
    <li>純資産の額ＯＡＧ税理士法人の上前様より連携されるが、売上実績の確定の都合上、連携時期は毎月中旬ごろとなる。</li>
@@ -125,8 +124,7 @@
    <span style="font-weight: bold;">保険業法施行規則 第211-72-3-1～2号</span></a>に定められた各種書類</td>   
  </tr>
  <tr>
- <th>備考</th>
- <td>
+ <td colspan="2">
   <ul>
    <li>提出するファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1lbWOIpdon25UlQNhnoZ_1nuAMNFTKx31?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
@@ -153,8 +151,7 @@
  <td>メール（宛先は「hokenkantokushitsu@tk.lfb-mof.go.jp」）</td>
 </tr>
  <tr>
- <th>備考</th>
- <td>
+ <td colspan="2">
   <ul>
    <li>一回目の提出（2024/10/31）→　修正指示</li>
    <li>二回目の提出（2024/11/01）→　再度の修正指示</li>
@@ -185,8 +182,7 @@
  手続き名は<span style="font-weight: bold;">「少額短期保険募集人の廃業等の届出」</span></td>
 </tr>
  <tr>
- <th>備考</th>
- <td>
+ <td colspan="2">
   <ul>
    <li>提出するファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1QiNZl8FZP11R8Npxms2M93LDFELdvl_b?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
@@ -215,8 +211,7 @@
  <td><a href="https://ssi-d.jp/business/detail/24" target="_blank">こちら</a>を参照してください。</td>
 </tr>
  <tr>
- <th>備考</th>
- <td>
+ <td colspan="2">
   <ul>
    <li>代理店側の担当はイズモ社の中村様。</li>
    <li>現在「パルモサービス株式会社」には、イズモ株式会社・出雲殿岡崎法人からの出向社員と
