--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -207,7 +207,7 @@
  <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
 </tr>
 <tr>
- <th>提出方法・提出物</th>
+ <th>提出方法</th>
  <td><a href="https://ssi-d.jp/business/detail/24" target="_blank">こちら</a>を参照してください。</td>
 </tr>
  <tr>
