--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
@@ -92,8 +92,7 @@
     <span style="font-size: 100%; font-weight: bold;">【 名古屋支店 】</span><br>
     <span style="font-size: 100%;">〒460-0003 名古屋市中区錦2-13-30 名古屋伏見ビル9階</span><br>
     <span style="font-size: 100%;">TEL：052-746-9313</span><br>
-    <span style="font-size: 100%;">Mail：natsuki_kuno@oag-tax.co.jp（久野 様）</span><br><br>
-      
+    <span style="font-size: 100%;">Mail：natsuki_kuno@oag-tax.co.jp（久野 様）</span><br>
   </p><br>  
     <p>
     <span style="font-size: 130%; font-weight: bold;">情報通信設備株式会社</span><br>
