--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -224,6 +224,33 @@
  </tr>
 </table>
 </section>
+
+<section>
+<h2>引受基準緩和型定期保険</h2>
+<table class="ta2">
+ <tr>
+  <th>スケジュール</th>
+  <td><span style="font-weight: bold;">2024年11月18日提出</span></td>
+ </tr>
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+<tr>
+ <th>提出方法</th>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a>
+ 手続き名は<span style="font-weight: bold;">「事業方法書等に定めた事項の変更の届出（保険業法272条の19第1項）」</span></td>
+</tr>
+ <tr>
+ <td colspan="2">
+  <ul>
+   <li>提出したファイルの保存先は<span style="font-weight: bold;">
+   <a href="" target=_blank">こちら（Googleドライブ）</a></span></li>
+  </ul>
+ </td>
+ </tr>
+</table>
+</section>
  
 </main>
 
