--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -52,7 +52,7 @@
 </tr>
 <tr>
  <th>提出方法</th>
- <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a><br>
  手続き名は<span style="font-weight: bold;">「少額短期保険業者による報告又は資料の提出」</span></td>
 </tr>
 <tr>
@@ -115,7 +115,7 @@
 </tr>
 <tr>
  <th>提出方法</th>
- <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a><br>
  手続き名は<span style="font-weight: bold;">「少額短期保険主要株主の承認・届出関係手続」</span></td>
 </tr>
  <tr>
@@ -178,7 +178,7 @@
 </tr>
 <tr>
  <th>提出方法</th>
- <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a><br>
  手続き名は<span style="font-weight: bold;">「少額短期保険募集人の廃業等の届出」</span></td>
 </tr>
  <tr>
@@ -238,14 +238,14 @@
 </tr>
 <tr>
  <th>提出方法</th>
- <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a><br>
  手続き名は<span style="font-weight: bold;">「事業方法書等に定めた事項の変更の届出（保険業法272条の19第1項）」</span></td>
 </tr>
  <tr>
  <td colspan="2">
   <ul>
    <li>提出したファイルの保存先は<span style="font-weight: bold;">
-   <a href="" target=_blank">こちら（Googleドライブ）</a></span></li>
+   <a href="https://drive.google.com/drive/folders/1-wFg3XGaAyT8Q2IUC9D-Mq7odiZsFbBs?usp=sharing" target=_blank">こちら（Googleドライブ）</a></span></li>
   </ul>
  </td>
  </tr>
