--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -247,6 +247,36 @@
  </tr>
 </table>
 </section>
+
+<section>
+<h2>計理人の退任と選任</h2>
+<table class="ta2">
+ <tr>
+  <th>スケジュール</th>
+  <td><span style="font-weight: bold;">2024年10月15日提出</span></td>
+ </tr>
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+<tr>
+ <th>提出方法</th>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a><br>
+ 手続き名は<span style="font-weight: bold;">「少額短期保険業者の保険計理人の選任又は退任の届出」</span></td>
+</tr>
+ <tr>
+ <td colspan="2">
+  <ul>
+   <li>提出したファイルの保存先は<span style="font-weight: bold;">
+   <a href="https://drive.google.com/drive/folders/1bwC_g-fVvbnkwDkfUyMVocF9DK7hx_DL?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
+   <li>2024年10月15日に提出したものの、差し戻しとなる。</li>
+   <li>退任に対する理由書がダメ。保険計理人が二人以上となる場合は、各保険計理人のそれぞれの職務に属する事項を記載した書面も必要。</li>
+   <li>門田さん・橋詰さんへ戻し。理由書と職務分掌を記載した書面待ち。</li>   
+  </ul>
+ </td>
+ </tr>
+</table>
+</section>
  
 </main>
 
