--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -269,9 +269,46 @@
   <ul>
    <li>提出したファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1bwC_g-fVvbnkwDkfUyMVocF9DK7hx_DL?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
+   <li>以下、経緯</li>
    <li>2024年10月15日に提出したものの、差し戻しとなる。</li>
-   <li>退任に対する理由書がダメ。保険計理人が二人以上となる場合は、各保険計理人のそれぞれの職務に属する事項を記載した書面も必要。</li>
-   <li>門田さん・橋詰さんへ戻し。理由書と職務分掌を記載した書面待ち。</li>   
+   <li>「保険計理人の変更届が提出されたが、期の途中というのははなはだ例外的であり、一身上の理由ということだけでは承服できない。
+    具体的な退職事由を記載の上、再度提出願いたい」とのこと。<br>
+    また、保険計理人が二人以上となる場合は、各保険計理人のそれぞれの職務に属する事項を記載した書面も不足。</li>
+   <li>能城氏の退任について事情がまったく不明なため、門田さん・橋詰さんへ戻し。<br>
+    理由書と職務分掌を記載した書面待ち。</li>   
+  </ul>
+ </td>
+ </tr>
+</table>
+</section>
+
+<section>
+<h2>取締役の兼職申請</h2>
+<table class="ta2">
+ <tr>
+  <th>スケジュール</th>
+  <td>なるべく早く</td>
+ </tr>
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+<tr>
+ <th>提出方法</th>
+ <td>指示はないが、手続きではないためメールと推察される。</td>
+</tr>
+ <tr>
+ <td colspan="2">
+  <ul>
+   <li>提出したファイルの保存先は<span style="font-weight: bold;">
+   <a href="https://drive.google.com/drive/folders/15QAl_lOh37YyXTAvmT2ipKOygj2GaZ-i?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
+   <li>以下、経緯</li>
+   <li>パルモグループ・岩瀬氏をきずな少短の取締役に就任させ、法人登記の変更も完了するも、東海財務局より10月16日、以下の指摘を受ける。</li>   
+   <li>兼業は事前申請が大前提であり、きずな社は承認前に兼業状態にあり、保険業法違反である。この状態のまま兼業申請を出されても受付そのものができない。
+    まずは法令違反の解消をしていただきたい。当局がサゼッションする立場にはないが、今回特別にアドバイスする。法令違反解消には岩瀬氏がパルモ社を退社、
+    もしくは非常勤勤務になりその旨をパルモ社が証明する。ただしこの場合は保険会社と代理店のファイアウォールをいかに構築するかという課題があり、
+    より有効な方法は岩瀬取締役の辞任である。兼業申請は差し戻すので申請を取り消すこと。そのうえで何故法令違反が発生したのかの理由と、
+    二度と違反が発生しないための改善策を顛末書として提出すること。</li>
   </ul>
  </td>
  </tr>
