--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -124,7 +124,7 @@
   <ul>
    <li>提出するファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1lbWOIpdon25UlQNhnoZ_1nuAMNFTKx31?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
-   <li>東海財務局の市原様より「提出物のうち特に理由書は、2024/10/25に太田代表と面談したときの内容を踏まえて作成すること」との指示あり。</li>
+   <li>岸さんより引き継いだファイルは、この↑ファイル内の書類がすべて。</li>
   </ul>
  </td>
  </tr>
@@ -270,7 +270,7 @@
    <li>提出したファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1bwC_g-fVvbnkwDkfUyMVocF9DK7hx_DL?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
    <li>以下、経緯</li>
-   <li>2024年10月15日に提出したものの、東海財務局より10月16日に門田社長が以下の指摘を受ける。</li>
+   <li>2024年10月15日に提出したものの、10月16日に門田社長が東海財務局より以下の指摘を受ける。</li>
    <li>「保険計理人の変更届が提出されたが、期の途中というのははなはだ例外的であり、一身上の理由ということだけでは承服できない。
     具体的な退職事由を記載の上、再度提出願いたい」とのこと。<br>
     また、保険計理人が二人以上となる場合は、各保険計理人のそれぞれの職務に属する事項を記載した書面も不足。</li>
@@ -307,13 +307,14 @@
    <li>提出したファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/15QAl_lOh37YyXTAvmT2ipKOygj2GaZ-i?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
    <li>以下、経緯</li>
-   <li>パルモグループ・岩瀬氏をきずな少短の取締役に就任させ、法人登記の変更も完了するも、東海財務局より10月16日に門田社長が以下の指摘を受ける。</li>   
+   <li>パルモグループ・岩瀬氏をきずな少短の取締役に就任させ、法人登記の変更も完了するも、10月16日に門田社長が東海財務局より以下の指摘を受ける。</li>   
    <li>「兼業は事前申請が大前提であり、きずな社は承認前に兼業状態にあり、保険業法違反である。この状態のまま兼業申請を出されても受付そのものができない。
     まずは法令違反の解消をしていただきたい。当局がサゼッションする立場にはないが、今回特別にアドバイスする。法令違反解消には岩瀬氏がパルモ社を退社、
     もしくは非常勤勤務になりその旨をパルモ社が証明する。ただしこの場合は保険会社と代理店のファイアウォールをいかに構築するかという課題があり、
     より有効な方法は岩瀬取締役の辞任である。兼業申請は差し戻すので申請を取り消すこと。そのうえで何故法令違反が発生したのかの理由と、
     二度と違反が発生しないための改善策を顛末書として提出すること」とのこと。</li>
-   <li>手続き上は、岩瀬氏に依頼し、取下げ済み（10/23）。顛末書待ち。</li>
+   <li>手続き上は、岩瀬氏から申請していただいたので、岩瀬氏に依頼して取下げ済み（10/23）</li>
+   <li>現状は顛末書待ち。今後の岩瀬氏の取締役辞任等については詳細不明。</li>
   </ul>
  </td>
  </tr>
