--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -320,6 +320,31 @@
  </tr>
 </table>
 </section>
+
+<section>
+<h2>その他</h2>
+<table class="ta2">
+ <tr>
+  <th>スケジュール</th>
+  <td>なるべく早く</td>
+ </tr>
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+ <tr>
+ <td colspan="2">
+  <ul>
+   <li>10月16日に門田社長が東海財務局より受けた指摘事項<br>
+   「OAGとのファイアウォールも示していただきたい」</li>
+   <li>10月16日に門田社長が東海財務局より受けた指摘事項<br>
+   「コンプライアンス体制が整っていない印象が強い。当局への届出に対するチェック体制はどうなっているのかも含め社内規定とコンプラ体制の合致が必須であり、
+    コンプラ体制を再構築して示していただきたい」</li>
+  </ul>
+ </td>
+ </tr>
+</table>
+</section>
  
 </main>
 
