--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -204,7 +204,9 @@
 </tr>
 <tr>
  <th>提出方法</th>
- <td><a href="https://ssi-d.jp/business/detail/24" target="_blank">こちら</a>を参照してください。</td>
+ <td><a href="https://ssi-d.jp/business/detail/24" target="_blank">こちら</a>を参照してください。<br>
+ イズモ社の中村様より提供された在籍者情報は
+  <a href="https://drive.google.com/drive/folders/1-6gHDGVNl_qxSQrcbZV8XSPYvBA8fUTo?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></td>
 </tr>
  <tr>
  <td colspan="2">
