--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -324,6 +324,36 @@
 </section>
 
 <section>
+<h2>令和6年9月期におけるヒアリング及び提出資料</h2>
+<table class="ta2">
+ <tr>
+  <th>スケジュール</th>
+  <td><span style="font-weight: bold;">2024年11月22日</span></td>
+ </tr>
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+<tr>
+ <th>提出方法</th>
+ <td>メール</td>
+</tr>
+<tr>
+ <th>提出物</th>
+ <td><a href="https://drive.google.com/drive/folders/1ma6eGl8Rqp-4MFqtWASotv7R7PBrzd_y?usp=drive_link" target=_blank">こちら（Googleドライブ）</a>
+  ただし、入力途中。</td>
+</tr>
+ <tr>
+ <td colspan="2">
+  <ul>
+   <li>別紙様式の１（決算の概要）については、OAG税理士法人の上前氏に依頼し、入力していただく。</li>
+  </ul>
+ </td>
+ </tr>
+</table>
+</section>
+ 
+<section>
 <h2>その他</h2>
 <table class="ta2">
  <tr>
@@ -337,9 +367,9 @@
  <tr>
  <td colspan="2">
   <ul>
-   <li>10月16日に門田社長が東海財務局より受けた指摘事項<br>
+   <li>10月16日に門田社長が東海財務局より受けた指摘事項・その他①<br>
    「OAGとのファイアウォールも示していただきたい」</li>
-   <li>10月16日に門田社長が東海財務局より受けた指摘事項<br>
+   <li>10月16日に門田社長が東海財務局より受けた指摘事項・その他②<br>
    「コンプライアンス体制が整っていない印象が強い。当局への届出に対するチェック体制はどうなっているのかも含め社内規定とコンプラ体制の合致が必須であり、
     コンプラ体制を再構築して示していただきたい」</li>
   </ul>
