--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -346,7 +346,7 @@
  <td colspan="2">
   <ul>
    <li>別紙様式の１（決算の概要）については、OAG税理士法人の上前氏に依頼し、入力していただく。</li>
-   <li>その他については、橋詰さんに依頼（11/15）</li>
+   <li>その他については、橋詰さんに依頼済（11/15）</li>
   </ul>
  </td>
  </tr>
