--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -32,8 +32,8 @@
  <!--/#menubar-->
  
 <main>
-<p>※当局対応については、少短協会ダッシュボード内の<a href="https://ssi-d.jp/business/" target="_blank">業務支援</a>や
- <a href="https://ssi-d.jp/documents/" target="_blank">当局手続き (報告・届出等)</a>にマニュアルがあるので参照してください。</p><br>
+<p>※当局対応については、<a href="https://ssi-d.jp/" target="_blank">少短協会ダッシュボード</a>内の
+ 業務支援や当局手続き (報告・届出等)</a>にマニュアルがあるので参照してください。</p><br>
  
 <section>
 <h2>報告徴求命令に基づく報告</h2>
@@ -204,7 +204,7 @@
 </tr>
 <tr>
  <th>提出方法</th>
- <td><a href="https://ssi-d.jp/business/detail/24" target="_blank">こちら</a>を参照してください。<br>
+ <td>協会ダッシュボードにログインのうえ、<a href="https://ssi-d.jp/business/detail/24" target="_blank">こちら</a>を参照してください。<br>
  イズモ社の中村様より提供された在籍者情報は
   <a href="https://drive.google.com/drive/folders/1-6gHDGVNl_qxSQrcbZV8XSPYvBA8fUTo?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></td>
 </tr>
