--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -32,8 +32,8 @@
  <!--/#menubar-->
  
 <main>
-<p>※当局対応については、<a href="https://ssi-d.jp/" target="_blank">少短協会ダッシュボード</a>内の
- 業務支援や当局手続き (報告・届出等)</a>にマニュアルがあるので参照してください。</p><br>
+<p>※当局対応については、<a href="https://ssi-d.jp/" target="_blank">少短協会ダッシュボード</a>内の業務支援や当局手続き (報告・届出等)</a>
+ にマニュアルがあるので参照してください。</p><br>
  
 <section>
 <h2>報告徴求命令に基づく報告</h2>
