--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -272,7 +272,7 @@
    <li>提出したファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1bwC_g-fVvbnkwDkfUyMVocF9DK7hx_DL?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
    <li>以下、経緯</li>
-   <li>2024年10月15日に提出したものの、10月16日に門田社長が東海財務局より以下の指摘を受ける。</li>
+   <li>2024年10月15日に提出したものの、10月16日に門田さんが東海財務局より以下の指摘を受ける。</li>
    <li>「保険計理人の変更届が提出されたが、期の途中というのははなはだ例外的であり、一身上の理由ということだけでは承服できない。
     具体的な退職事由を記載の上、再度提出願いたい」とのこと。<br>
     また、保険計理人が二人以上となる場合は、各保険計理人のそれぞれの職務に属する事項を記載した書面も不足。</li>
@@ -309,7 +309,7 @@
    <li>提出したファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/15QAl_lOh37YyXTAvmT2ipKOygj2GaZ-i?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
    <li>以下、経緯</li>
-   <li>パルモグループ・岩瀬氏がきずな少短の取締役に就任し、法人登記の変更も完了するも、10月16日に門田社長が東海財務局より以下の指摘を受ける。</li>   
+   <li>パルモグループ・岩瀬氏がきずな少短の取締役に就任し、法人登記の変更も完了するも、10月16日に門田さんが東海財務局より以下の指摘を受ける。</li>   
    <li>「兼業は事前申請が大前提であり、きずな社は承認前に兼業状態にあり、保険業法違反である。この状態のまま兼業申請を出されても受付そのものができない。
     まずは法令違反の解消をしていただきたい。当局がサゼッションする立場にはないが、今回特別にアドバイスする。法令違反解消には岩瀬氏がパルモ社を退社、
     もしくは非常勤勤務になりその旨をパルモ社が証明する。ただしこの場合は保険会社と代理店のファイアウォールをいかに構築するかという課題があり、
@@ -363,9 +363,9 @@
  <tr>
  <td colspan="2">
   <ul>
-   <li>10月16日に門田社長が東海財務局より受けた指摘事項・その他①<br>
+   <li>10月16日に門田さんが東海財務局より受けた指摘事項・その他①<br>
    「OAGとのファイアウォールも示していただきたい」</li>
-   <li>10月16日に門田社長が東海財務局より受けた指摘事項・その他②<br>
+   <li>10月16日に門田さんが東海財務局より受けた指摘事項・その他②<br>
    「コンプライアンス体制が整っていない印象が強い。当局への届出に対するチェック体制はどうなっているのかも含め社内規定とコンプラ体制の合致が必須であり、
     コンプラ体制を再構築して示していただきたい」</li>
   </ul>
