--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -58,7 +58,7 @@
 <tr>
  <td colspan="2">
   <ul>
-   <li>毎月5日の報告は、ＯＡＧ税理士法人の上前様より前月末時点の事業費と現預金残高が連携されるので、それを元に作成すること。</li>
+   <li>毎月5日の報告は、ＯＡＧ税理士法人の上前氏より前月末時点の事業費と現預金残高が連携されるので、それを元に作成すること。</li>
    <li>毎月15日、25日の報告は、10日時点・20日時点の普通預金口座と収納口座、両方の残高を現預金残高として作成すること。</li>
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
    <li>提出したファイルの過去分は<span style="font-weight: bold;">
@@ -90,8 +90,8 @@
 <tr>
  <td colspan="2">
   <ul>
-   <li>ＯＡＧ税理士法人の上前様より前月末時点の事業費と現預金残高の連携されるので、それを元に作成すること。</li>
-   <li>純資産の額ＯＡＧ税理士法人の上前様より連携されるが、売上実績の確定の都合上、連携時期は毎月中旬ごろとなる。</li>
+   <li>ＯＡＧ税理士法人の上前氏より前月末時点の事業費と現預金残高の連携されるので、それを元に作成すること。</li>
+   <li>純資産の額ＯＡＧ税理士法人の上前氏より連携されるが、売上実績の確定の都合上、連携時期は毎月中旬ごろとなる。</li>
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
    <li>提出したファイルの過去分は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link" target="_blank">こちら（Googleドライブ）</a></span></li>
@@ -205,13 +205,13 @@
 <tr>
  <th>提出方法</th>
  <td>協会ダッシュボードにログインのうえ、<a href="https://ssi-d.jp/business/detail/24" target="_blank">こちら</a>を参照してください。<br>
- イズモ社の中村様より提供された在籍者情報は
+ イズモ社の中村氏より提供された在籍者情報は
   <a href="https://drive.google.com/drive/folders/1-6gHDGVNl_qxSQrcbZV8XSPYvBA8fUTo?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></td>
 </tr>
  <tr>
  <td colspan="2">
   <ul>
-   <li>代理店側の担当はイズモ社の中村様。</li>
+   <li>代理店側の担当はイズモ社の中村氏。</li>
    <li>現在「パルモサービス株式会社」には、イズモ株式会社・出雲殿岡崎法人からの出向社員と
    「パルモサービス株式会社」へ転籍した社員がいるらしく、転籍社員の中にすでに募集試験合格者が存在するとのこと。</li>
    <li>パルモサービス株式会社の定款の目的欄を確認してもらったところ、適切な記載がなかったため、定款変更の手続き中とのこと。</li>
