--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -84,7 +84,15 @@
  <a href="http://www.lock-search.com/add_pdf/kabadrive/kaba-drive-toriatukai.pdf" target="_blank">
  http://www.lock-search.com/add_pdf/kabadrive/kaba-drive-toriatukai.pdf</a></td>
   </tr>
-
+ <tr>
+  <td>
+   <span style="font-weight:bold;">少短協会ダッシュボード</span><br>
+   ユーザー管理について、岸氏と清原氏の退職に伴う削除申請を行いましたが、協会側の承認スケジュールの関係上、まだ承認されておりません。<br>
+   承認され次第、ユーザーの削除ができるとのことですので、ご対応お願いいたします。<br>
+   また、岸氏で登録されていた反社会的勢力情報検索システムについては、一時的に門田氏で登録されております。<br>
+   当該システムは、新規申込引受時に利用するシステムのため、業務部関係でどなたかを担当者として選任し、登録していただくのがよろしいかと存じます。
+  </td>
+  </tr>
 </table>
 </section>
 
