--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record1.html
@@ -48,8 +48,8 @@
 <td>
 <div class="select2">
  <select name="entry.60920098">
+  <option value="OAGライコン">OAGライコン</option>
   <option value="金海">金海</option>
-  <option value="--">--</option>
   <option value="その他">その他</option>
  </select>
 </div>
