--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -87,12 +87,11 @@
  <tr>
   <td>
    <span style="font-weight:bold;">少短協会ダッシュボード</span><br>
-   ユーザー管理について、岸氏と清原氏の退職に伴う削除申請を行いましたが、協会側の承認スケジュールの関係上、まだ承認されておりません。
+   ユーザー管理について、金海の退職に伴う削除申請を反映日次を11/30で行いました。
    承認され次第、ユーザーの削除ができるようにになります。<br><br>
    また、岸氏で登録されていた反社会的勢力情報検索システムについては、一時的に門田氏で登録されてます。<br>
    当該システムは、新規申込引受時に利用するシステムのため、業務部関係でどなたかを担当者として選任し、登録してください。<br><br>
-   水野谷様のユーザー登録をすでに申請中ですが、協会側の承認がまだの状況です。<br>
-   しばらくは、金海のID・PASSをご利用ください。
+   水野谷様のユーザー登録が11/19に承認されました。協会よりID・PASSに関するメールが発信済です。
   </td>
   </tr>
 </table>
