--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -34,7 +34,7 @@
 <main>
 
 <section>
-<h2>Memo（2024/11/19現在）</h2>
+<h2>Memo（2024/11/20現在）</h2>
 <table class="ta2">
   <tr>
   <td>
@@ -87,11 +87,12 @@
  <tr>
   <td>
    <span style="font-weight:bold;">少短協会ダッシュボード</span><br>
-   ユーザー管理について、金海の退職に伴う削除申請を反映日次を11/30で行いました。
-   承認され次第、ユーザーの削除ができるようになります。<br><br>
+   ユーザー管理について、金海の退職に伴う削除申請を反映日次を11/30で行いました。<br>
+   承認され次第、ユーザーの削除をお願いします。<br><br>
    また、岸氏で登録されていた反社会的勢力情報検索システムについては、一時的に門田氏で登録されてます。<br>
    当該システムは、新規申込引受時に利用するシステムのため、業務部関係でどなたかを担当者として選任し、登録してください。<br><br>
-   水野谷様のユーザー登録が11/19に承認されました。協会よりID・PASSに関するメールが発信済です。
+   水野谷様のユーザー登録が11/19に承認されました。<br>
+   協会よりID・PASSに関するメールが発信済です。
   </td>
   </tr>
 </table>
