--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -38,7 +38,7 @@
 <table class="ta2">
   <tr>
   <td>
-   <span style="font-weight:bold;">業務用携帯</span><br>
+   <span style="font-weight:bold;">業務用スマホ</span><br>
   11月20日の16時以降、03プラスをログアウトした状態で東京事務所へ郵送予定です。<br>
   11月21日以降は、03プラスを東京事務所で受電できる体制にしてください。</td>
  </tr>
@@ -93,6 +93,13 @@
    当該システムは、新規申込引受時に利用するシステムのため、業務部関係でどなたかを担当者として選任し、登録してください。<br><br>
    水野谷様のユーザー登録が11/19に承認されました。<br>
    協会よりID・PASSに関するメールが発信済です。
+  </td>
+  </tr>
+ <tr>
+  <td>
+   <span style="font-weight:bold;">健康保険被保険者証</span><br>
+   金海の健康保険被保険者証（ブルーのカード）は11月20日の16時以降、東京事務所へ郵送予定です。<br>
+   （業務用スマホと同封。ゆうパックにて送付「お問い合わせ番号：1053-3071-4661」）
   </td>
   </tr>
 </table>
