--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -39,7 +39,7 @@
   <tr>
   <td>
    <span style="font-weight:bold;">業務用スマホ</span><br>
-  11月20日の16時以降、03プラスをログアウトした状態で東京事務所へ郵送予定です。<br>
+  11月20日の16時30分以降、03プラスをログアウトした状態で東京事務所へ郵送予定です。<br>
   11月21日以降は、03プラスを東京事務所で受電できる体制にしてください。</td>
  </tr>
   <tr>
@@ -98,7 +98,7 @@
  <tr>
   <td>
    <span style="font-weight:bold;">健康保険被保険者証</span><br>
-   金海の健康保険被保険者証（ブルーのカード）は11月20日の16時以降、東京事務所へ郵送予定です。<br>
+   金海の健康保険被保険者証（ブルーのカード）は11月20日の16時30分以降、東京事務所へ郵送予定です。<br>
    （業務用スマホと同封。ゆうパックにて送付「お問い合わせ番号：1053-3071-4661」）
   </td>
   </tr>
