--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -63,8 +63,7 @@
    <tr>
     <td>
    <span style="font-weight:bold;">PC（デスクトップ・ノート）</span><br>
-     11月20日の17時30分以降、名古屋事務所内のPC（デスクトップ・ノート）の電源を落とします。</br>
-     リモートアクセスでの対応も不可となりますので、予めご了承ください。</td>
+     11月20日の17時30分以降、名古屋事務所内のPC（デスクトップ）の電源を落とします。ノートはそのまま。</td>
   </tr>   
  <tr>
   <td>
